# ComputerGraphicsCourse

./: README.md
lab3/: CMakeLists.txt  Circle.cpp  Circle.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Level.cpp  Level.h  main.cpp  projections.h
lab4/: Bresenhem.h  CMakeLists.txt  Filter.h  MyBuffer.cpp  MyBuffer.h  Pixel.cpp  Pixel.h  main.cpp
lab5/: CMakeLists.txt  Figure.cpp  Figure.h  Point.cpp  Point.h  main.cpp
lab6/: CMakeLists.txt  Circle.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Level.cpp  Level.h  MyVector.cpp  MyVector.h  STORAGEDATA.txt  Vertex.cpp  Vertex.h  globalVarsAndCallbacks.h  lightThings.h  main.cpp  projections.h  textureThings.h
lab7/: CMakeLists.txt  Circle.cpp  Cone.cpp  Cone.h  Cube.cpp  MyVector.cpp  MyVector.h  RESULTS.txt  STORAGEDATA.txt  Vertex.cpp  Vertex.h  definitions.h  globalVarsAndCallbacks.h  lightThings.h  main.cpp  projections.h  textureThings.h  timeThings.h
lab8/: CMakeLists.txt  Circle.cpp  Circle.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  GlobalVarsAndCallback.h  Level.cpp  Level.h  main.cpp  shaderThings.h
