cmake_minimum_required(VERSION 3.8)
project(lab3)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -framework OpenGl")
set(CMAKE_CXX_STANDARD 11)
set(GLFW_USE_CHDIR)
set(GLFW_USE_MENUBAR)
set(GLFW_USE_RETINA)
set(SOURCE_FILES main.cpp Cone.cpp Cone.h Level.cpp Level.h Cube.cpp Cube.h projections.h Circle.cpp Circle.h)
add_executable(lab3 ${SOURCE_FILES})
target_link_libraries(lab3 GLEW GLFW)